--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,26 @@
 
 /* Your CSS Code here. */
+.holder {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+	flex-direction: row-reverse;
+}
+.item1{
+	background-color: red;
+}
+.item2 ,.item4{
+	background-color: green;
+}
+.item3{
+	background-color:blue;
+}
+
+.item {
+    flex: 1 0 auto;
+    margin: 0 5px;
+	color: white;
+	/* background-color: lightseagreen; */
+	border: 2px solid green;
+	height: 300px;
+}
